@@ -308,7 +308,7 @@ under the License.
     <dep.mockito.version>1.9.5</dep.mockito.version>
     <!-- note: old version of netty is required by hadoop_facebook for tests to succeed -->
     <dep.oldnetty.version>3.2.2.Final</dep.oldnetty.version>
-    <dep.netty.version>4.0.14.Final</dep.netty.version>
+    <dep.netty.version>4.0.21.Final</dep.netty.version>
     <dep.paranamer.version>2.3</dep.paranamer.version>
     <dep.slf4j.version>1.7.5</dep.slf4j.version>
     <dep.tinkerpop.rexter.version>2.4.0</dep.tinkerpop.rexter.version>
